# sesame-finetune

./: .gitignore  README.md  audio_clean_transcribe_cli.py  dataloaders.py  infer.py  main.py  pretokenize.py  pyproject.toml  requirements.txt  sentences.csv  sweep.py  train.py  utils.py
configs/: sweep.yaml
data_prep/: prepare_csm_data.py  split_manifest_by_speaker.py
