[project]
name = "sesame-finetune"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faster-whisper>=1.2.0",
    "librosa>=0.11.0",
    "numpy>=2.2.6",
    "pyannote-audio>=3.1",
    "resemblyzer>=0.1.4",
    "soundfile>=0.13.1",
    "tokenizers>=0.21,<0.22",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
]
